analytics/matomo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  labels:
    app: matomo
spec:
  ports:
    - port: 80
      name: web
      protocol: TCP
  selector:
    app: matomo
    tier: dashboard
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo
  labels:
    app: matomo
spec:
  selector:
    matchLabels:
      app: matomo
      tier: dashboard
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: matomo
        tier: dashboard
    spec:
      containers:
        - name: matomo
          image: matomo
          ports:
            - containerPort: 80
              name: matomo
          volumeMounts:
            - name: matomo-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: matomo-persistent-storage
          persistentVolumeClaim:
            claimName: matomo-pv-claim
