analytics/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo-mysql
  namespace: matomo
  labels:
    app: matomo
spec:
  ports:
    - port: 3306
  selector:
    app: matomo
    tier: mysql
  clusterIP: None

---

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: matomo-mysql
  namespace: matomo
  labels:
    app: matomo
spec:
  selector:
    matchLabels:
      app: matomo
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: matomo
      labels:
        app: matomo
        tier: mysql
    spec:
      containers:
        - image: mysql:5.6
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
