analytics/matomo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matomo
  namespace: matomo
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: buypass
spec:
  tls:
    - hosts:
        - analytics.minsky.cc
      secretName: analytics.minsky.cc-cert
  rules:
    - host: analytics.minsky.cc
      http:
        paths:
          - path: /
            backend:
              serviceName: matomo
              servicePort: web
